もっともっと格好良く変こう

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <title>さらにかっこいいHTML</title>
+    <title>さらに^2かっこいいHTML</title>
   </head>
   <body>
     <h1>５兆円欲しい</h1>
